<resources>
    <string name="facebook_app_id">566433866871466</string>
    <string name="google_map_key">AIzaSyB1tz9V3r-r8CHxfrOwRbRc-KoESr4XWp0</string>
    <string name="app_name">Ambulance NOW</string>
    <string name="action_settings">Settings</string>
    <string name="You_need_ambulance">Cần xe cứu thương ?</string>
    <string name="You_are_ambulance">Làm xe cứu thương ?</string>
    <string name="You_need_ambulance_">Cần xe cứu thương >></string>
    <string name="You_are_ambulance_">Làm xe cứu thương >></string>
    <string name="Login">Đăng nhập</string>
    <string name="Quit">Thoát</string>
    <string name="Login_error">Đăng nhập thất bại. Kiểm tra lại thông tin.</string>
    <string name="Where_from">Nhấp chọn địa điểm đón</string>
    <string name="Pick_place_start">địa chỉ</string>
    <string name="Passenger_dest">Địa điểm đón khách</string>
    <string name="Available">Sẵn sàng</string>
    <string name="wait_passenger">đang chờ khách</string>
    <string name="Static">Trạng thái tĩnh</string>
    <string name="no_pick_driver">chưa chọn xe</string>

    <string name="Find_driver_cap">Tìm xe cứu thương</string>
    <string name="Request">Yêu cầu</string>
    <string name="End">Kết thúc</string>
    <string name="Accept">Chấp nhận</string>
    <string name="Deny">Từ chối</string>
    <string name="Arrived">Đã đến nơi</string>
    <string name="Cancel">Hủy</string>
    <string name="Please_turn_on_gps">Vui lòng kiểm tra GPS</string>
    <string name="Please_get_another_location">Vui lòng chọn địa điểm khác</string>
    <string name="Wait_for_response">Chờ phản hồi</string>
    <string name="from">từ</string>
    <string name="customer">khách</string>
    <string name="vehicle">xe</string>
    <string name="Accepted">Đã chấp nhận</string>
    <string name="Still_waiting">Đang chờ</string>
    <string name="You_get_the_request">Bạn nhận được yêu cầu</string>
</resources>
