<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_login"
    android:gravity="center">

    <com.venmo.view.TooltipView
        android:id="@+id/tooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:text="email:tai@pinride.me\npassword:123"
        app:tooltipColor="@color/ambulance_color1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:arrowAlignment="start"
        app:cornerRadius="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#75757560"
        android:layout_below="@+id/tooltip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/You_need_ambulance"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:background="@color/ambulance_color1"
                android:textStyle="bold"
                android:text="@string/Login"
                android:layout_weight="0.5"/>
            <Button
                android:id="@+id/btn_quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:background="@color/ambulance_color1"
                android:textStyle="bold"
                android:text="@string/Quit"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_change_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="right"
            android:text="@string/You_are_ambulance_"/>

    </LinearLayout>

</RelativeLayout>
