<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/drawable_bg_line_bound">

    <RelativeLayout
        android:id="@+id/rl_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_from"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:singleLine="true"
            android:text="@string/Passenger_dest" />

        <TextView
            android:id="@+id/tv_from_ex"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_from"
            android:layout_marginLeft="48dp"
            android:singleLine="true"
            android:text="@string/Pick_place_start"
            android:textColor="@color/v2_warm_grey" />

        <ImageView
            android:id="@+id/img_delete_from"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="14dp"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/v_center"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/rl_from"
        android:layout_marginLeft="64dp"
        android:background="#c8c7cc" />

    <RelativeLayout
        android:id="@+id/rl_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_center"
        android:background="?attr/selectableItemBackground"
        android:padding="12dp">

        <ImageView
            android:id="@+id/img_mini_ava"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_to"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:singleLine="true"
            android:text="@string/Available" />

        <TextView
            android:id="@+id/tv_to_ex"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_to"
            android:layout_marginLeft="48dp"
            android:singleLine="true"
            android:text="@string/wait_passenger"
            android:textColor="@color/v2_warm_grey" />

        <ImageView
            android:id="@+id/img_delete_to"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="14dp"
            android:visibility="invisible" />
    </RelativeLayout>
</RelativeLayout>